# COS214-Project

./: .gitignore  README.md  Welcome.txt  main.cpp  makefile  readme.txt
ArmyHierarchy/: AirUnit.cpp  AirUnit.h  Army.cpp  Army.h  GroundUnit.cpp  GroundUnit.h  MedicUnit.cpp  MedicUnit.h  Unit.cpp  Unit.h  WhiteFlag.txt
ArmyHierarchy/Iterator/: AirUnitIterator.cpp  AirUnitIterator.h  ArmyIterator.cpp  ArmyIterator.h  GroundUnitIterator.cpp  GroundUnitIterator.h  MedicUnitIterator.cpp  MedicUnitIterator.h
ArmyHierarchy/Transport/: Aircraft.cpp  Aircraft.h  AircraftMaker.cpp  AircraftMaker.h  ArmouredTruck.cpp  ArmouredTruck.h  ArmouredTruckMaker.cpp  ArmouredTruckMaker.h  Tank.cpp  Tank.h  TankMaker.cpp  TankMaker.h  Transport.cpp  Transport.h  TransportBuilder.cpp  TransportBuilder.h
Country/: Alliance.cpp  Alliance.h  Artillery.cpp  Artillery.h  Artillery.txt  Country.cpp  Country.h  Missile.h  Nuke.cpp  Nuke.h  WMD.cpp  WMD.h
Data/Doxygen/html/: _air_unit_8h_source.html  _air_unit_iterator_8h_source.html  _aircraft_8h_source.html  _aircraft_maker_8h_source.html  _airspace_8cpp.html  _airspace_8h_source.html  _alliance_8h_source.html  _armoured_truck_8h_source.html  _armoured_truck_maker_8h_source.html  _army_8cpp.html  _army_8h_source.html  _army_iterator_8h_source.html  _artillery_8h_source.html  _bazooka_8h_source.html  _cal45short_8h_source.html  _colt12_b_8h_source.html  _country_8cpp.html  _country_8h_source.html  (+146 more)
Diagrams/Sequence Diagrams/: SequenceDiagram - v.01.vpp  SequenceDiagram - v.01.vpp.bak_000f  SequenceDiagram - v.01.vpp.bak_001d  SequenceDiagram - v.01.vux
PersonHierarchy/: Civilian.cpp  Civilian.h  Medic.cpp  Medic.h  Person.cpp  Person.h  Soldier.cpp  Soldier.h
PersonHierarchy/PersonFactory/: CivilianFactory.cpp  CivilianFactory.h  MedicFactory.cpp  MedicFactory.h  PersonFactory.cpp  PersonFactory.h  SoldierFactory.cpp  SoldierFactory.h
Phase/: Deter.cpp  Deter.h  Dominate.cpp  Dominate.h  Phase.cpp  Phase.h  Seize.cpp  Seize.h
SYSTEM/: CMakeLists.txt  main.cpp  makefile
SYSTEM/ArmyHierarchy/: AirUnit.cpp  AirUnit.h  Army.cpp  Army.h  GroundUnit.cpp  MedicUnit.cpp  Soldier.txt  Unit.cpp
SYSTEM/Country/: Alliance.cpp  Alliance.h  Country.h  WMD.cpp
SYSTEM/PersonHierarchy/: Soldier.h
SYSTEM/Phase/: Dominate.h
SYSTEM/Testing/: README.md
SYSTEM/WarTheater/: DunkirkMap.txt  PearlHarbour.txt  WarTheater.h
SYSTEM/WeaponHierarchy/: Colt12B.h  GasBomb.cpp  GasBomb.h  M1917Enfield.h  PistolFactory.h  Weapon.h
Sequence Diagrams/: SequenceDiagram - v.01.vpp
System/ArmyHierarchy/: MedicUnit.cpp  MedicUnit.h
System/Country/: Artillery.txt  Nuke.h  Nuke.txt
System/Main Program/: BeginGame.txt  CMakeLists.txt  EndGame.txt  SelectBattle.txt  main.cpp  makefile
System/Main Program/ArmyHierarchy/: AirUnit.cpp  Army.cpp  Army.h  GroundUnit.cpp  GroundUnit.h  Unit.cpp  Unit.h  WhiteFlag.txt
System/Main Program/ArmyHierarchy/Iterator/: AirUnitIterator.h  ArmyIterator.cpp  ArmyIterator.h  GroundUnitIterator.h  MedicUnitIterator.cpp
System/Main Program/ArmyHierarchy/Transport/: Aircraft.cpp  Aircraft.h  AircraftMaker.cpp  AircraftMaker.h  ArmouredTruck.h  ArmouredTruckMaker.cpp  Tank.cpp  TransportBuilder.cpp
System/Main Program/Country/: Alliance.cpp  Artillery.cpp  Artillery.h  Country.cpp  Nuke.cpp  WMD.h
System/Main Program/PersonHierarchy/: Medic.cpp  Person.cpp  Person.h
System/Main Program/PersonHierarchy/PersonFactory/: MedicFactory.cpp  SoldierFactory.h
System/Main Program/Phase/: Deter.cpp  Phase.cpp  Phase.h  Seize.cpp
System/Main Program/UnitTests/: ArmyTest.cc  GroundUnitTest.cc  MedicFactory.cc  MedicTest.cc  MultipleFunctionTest.cc  PhaseTest.cc  TransportTest.cc  WeaponTest.cc  test.cc
System/Main Program/WarTheater/: Airspace.cpp  Dunkirk.txt  PearlHarbourMap.txt  Sea.h
System/Main Program/WeaponHierarchy/: Bazooka.cpp  Bazooka.h  Cal45short.h  Colt12B.cpp  ExplosiveFactory.h  ExplosiveProduct.h  M1Garand.cpp  M1Garand.h  RifleFactory.cpp  RifleProduct.cpp  Weapon.cpp  WeaponFactory.h
System/PersonHierarchy/: Medic.h
System/Phase/: Deter.h  Seize.h
System/UnitTests/: ArmyTest.cc  GroundUnitTest.cc  MultipleFunctionTest.cc  TransportTest.cc
System/WarTheater/: WarTheater.cpp
System/WeaponHierarchy/: PistolProduct.cpp  PistolProduct.h  RifleFactory.h  RifleProduct.h  WeaponFactory.cpp
WarTheater/: Airspace.cpp  Airspace.h  Desert.cpp  Desert.h  Dunkirk.txt  Normandy.txt  Sea.cpp  Sea.h  WarTheater.h
WeaponHierarchy/: Bazooka.cpp  Bazooka.h  Cal45short.cpp  Cal45short.h  Colt12B.cpp  Colt12B.h  ExplosiveFactory.cpp  ExplosiveFactory.h  ExplosiveProduct.cpp  ExplosiveProduct.h  GasBomb.cpp  GasBomb.h  Grenade.h  M1917Enfield.cpp  M1917Enfield.h  M1Garand.cpp  M1Garand.h  PistolFactory.cpp  PistolFactory.h  PistolProduct.cpp  PistolProduct.h  RifleFactory.cpp  RifleFactory.h  RifleProduct.cpp  RifleProduct.h  Weapon.cpp  Weapon.h  WeaponFactory.cpp  WeaponFactory.h
WeaponHierarchy/WeaponFactory/: ExplosiveFactory.cpp  ExplosiveFactory.h  PistolFactory.cpp  PistolFactory.h  RifleFactory.cpp  RifleFactory.h  WeaponFactory.cpp  WeaponFactory.h
(+219 files in other folders)
